# hola_axum2

./: Cargo.toml
src/: main.rs
static/: admin.html  admin_mensajes.html  contacto.html  detalle.html  gracias.html  index.html  motos.html  otros.html
static/admin/: dashboard.html  layout.html  mensajes.html
static/css/: styles.css
